--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
           <li><a class="github" aria-label="GitHub" href="https://github.com/ayush13344" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="twitter" aria-label="Twitter" href="/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="https://t.me/lifecode5" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
+          <li><a class="telegram" aria-label="Telegram" href="https://t.me/" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
           <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/"><i class="fab fa-instagram" target="_blank"></i></a></li>
           <li><a class="dev" aria-label="Dev" href="https://dev.to/" target="_blank"><i class="fab fa-dev"></i></a></li>
         </ul>
@@ -100,11 +100,7 @@
             </div>
         </div>
         
-        <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1rZiXl562q7aVyk1kJ2nO85YBAq8ixTiw/view" target="_blank" class="btn"><span>Resume</span>
-                <i class="fas fa-chevron-right"></i>
-            </a>
-        </div>
+       
 
     </div>
     </div>
@@ -412,7 +408,7 @@
               <a href="https://github.com/ayush13344" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
               <a href="mailto:nagpalayush65@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
               <a href="https://twitter.com/" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="https://t.me/" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
           </div>
       </div>
   </div>
