--- a/404.html
+++ b/404.html
@@ -24,8 +24,8 @@
             <li><a href="/#about">About</a></li>
             <li><a href="/#skills">Skills</a></li>
             <li><a href="/#education">Education</a></li>
-            <li><a href="/#work">Work</a></li>
-            <li><a href="/#experience">Experience</a></li>
+          
+            <li><a href="/#experience">Projects</a></li>
             <li><a href="/#contact">Contact</a></li>
             </ul>
         </nav>
@@ -71,8 +71,8 @@
           <a href="/#about"><i class="fas fa-chevron-circle-right"></i> about</a>
           <a href="/#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
           <a href="/#education"><i class="fas fa-chevron-circle-right"></i> education</a>
-          <a href="/#work"><i class="fas fa-chevron-circle-right"></i> work</a>
-          <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> experience</a>
+        
+          <a href="/#experience"><i class="fas fa-chevron-circle-right"></i> projects</a>
       </div>
 
       <div class="box">
@@ -82,11 +82,11 @@
           <p> <i class="fas fa-map-marked-alt"></i>Gwalior, India-474004</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
-              <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
-              <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
-              <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
-              <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/" class="fab fa-linkedin" target="_blank"></a>
+              <a href="https://github.com/ayush13344" class="fab fa-github" target="_blank"></a>
+              <a href="mailto:nagpalayush65@gmail.com" class="fas fa-envelope" target="_blank"></a>
+              <a href="https://twitter.com/ class="fab fa-twitter" target="_blank"></a>
+              <a href="https://t.me/" class="fab fa-telegram-plane" target="_blank"></a>
           </div>
       </div>
   </div>
